# miko

./: .dockerignore  .env.example  .envrc  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.js
migrations/: 20240104230657_create_authentication.sql  20240105001843_create_user_permissions.sql  20240107224556_create_chats.sql  20240107224602_create_goals.sql  20240107225536_create_messages.sql  20240107230405_create_prompts.sql
public/: manifest.json
queries/: upsert_user_account.sql
queries/chats/: chat_create.sql  chat_delete.sql  chat_get.sql  chat_list.sql  title_update.sql
queries/logs/: add_new.sql  get_for_chat.sql
queries/messages/: get_for_chat.sql
queries/variables/: get_for_chat.sql
src/: api.rs  app.rs  contexts.rs  error_template.rs  lib.rs  main.rs
src/app/: handlers.rs  state.rs
src/components/: account_dropdown.rs  chat.rs  chat_logs.rs  example_prompts.rs  file1.csv  footer.rs  header.rs  layout.rs  logo.rs  logout.rs  mdown.rs  mod.rs  sidebar.rs  workspace.rs
src/components/daisyui/: mod.rs
src/components/modals/: chat_details.rs  file.rs  logout.rs  mod.rs
src/models/: audio.rs  chat.rs  embeddings.rs  files.rs  fine_tuning.rs  images.rs  mod.rs  moderation.rs  user.rs
src/pages/: about.rs  chat.rs  homepage.rs  mod.rs
src/pgdb/: chat.rs  mod.rs  user.rs
src/routes/: authn.rs  chats.rs  files.rs  mod.rs
src/server/: localai.rs  mod.rs  workspace.rs
src/server/localai/: audio.rs  chat.rs  embeddings.rs  files.rs  fine_tuning.rs  images.rs  mod.rs  models.rs  moderations.rs
src/server/localai/provider/: mod.rs
style/: tailwind.css
